# LinAlg_Project

./: Google_Tensorflow_ImageDetection.ipynb  Keras_TrafficSignRecognition.ipynb  LA_Slides.pptx  README.md  ~$LA_Slides.pptx
.ipynb_checkpoints/: Keras_TrafficSignRecognition-checkpoint.ipynb
Convolutional_neural_network-master/: convolutional_network_tutorial-Copy1.ipynb  convolutional_network_tutorial.ipynb  requirements.txt
Convolutional_neural_network-master/.ipynb_checkpoints/: convolutional_network_tutorial-Copy1-checkpoint.ipynb
tsr-analysis-src/: CMakeLists.txt  readme.txt
tsr-analysis-src/gui/: compareInfoWindow.ui  confusionMatrix.ui  difficultSignsWindow.ui  mainwindow.ui  methodInfoWindow.ui  pictureWidget.ui  progressWindow.ui  settingsWindow.ui
tsr-analysis-src/include/: CMProxyModel.h  CMTableModel.h  TSRDefs.h  compareInfoWindow.h  confusionMatrix.h  difficultSignsWindow.h  mainwindow.h  methodInfoWindow.h  pictureWidget.h  progressWindow.h  settings.h  settingsWindow.h
tsr-analysis-src/resources/: signs.qrc
tsr-analysis-src/src/: CMProxyModel.cpp  CMTableModel.cpp  compareInfoWindow.cpp  confusionMatrix.cpp  difficultSignsWindow.cpp  main.cpp  mainwindow.cpp  methodInfoWindow.cpp  pictureWidget.cpp  progressWindow.cpp  settings.cpp  settingsWindow.cpp
